# rusty-fork

./: .pre-commit-config.yaml  Procfile  README.md  dev-requirements.txt  package.json  pyproject.toml  railway.json  requirements.txt  setup.cfg
config/: settings.py  urls.py
rustyfork/: urls.py  views.py
rustyfork/core/: apps.py
rustyfork/core/management/commands/: makesuperuser.py
rustyfork/static/vendors/htmx/: htmx.min.js
rustyfork/templates/: about.html  base.html  home.html  menu.html
rustyfork/users/: apps.py  forms.py
rustyfork/users/migrations/: 0001_initial.py
